--- a/index.html
+++ b/index.html
@@ -31,53 +31,53 @@
         // Responses based on the dice roll
         const responses = [
             [
-                "It's a critical failure. Your day might be challenging, but you'll learn from it.",
-                "It's a critical failure. Don't worry, it's just a little setback.",
-                "It's a critical failure. Keep your spirits high; better days are coming.",
-                "It's a critical failure. The morning might be tough, but the day can improve.",
-                "It's a critical failure. Challenges lie ahead, but you're up for it."
+                "Your day might be challenging, but you'll learn from it.",
+                "Don't worry, it's just a little setback.",
+                "Keep your spirits high; better days are coming.",
+                "The morning might be tough, but the day can improve.",
+                "Challenges lie ahead, but you're up for it."
             ],
             [
-                "You rolled a 2. The day ahead doesn't look great, but it's not the worst.",
-                "You rolled a 2. Keep your chin up; there's room for improvement.",
-                "You rolled a 2. It's a low roll, but you can make the best of it.",
-                "You rolled a 2. The start is rough, but things can turn around.",
-                "You rolled a 2. Not the best roll, but it's only the beginning."
+                "The day ahead doesn't look great, but it's not the worst.",
+                "Keep your chin up; there's room for improvement.",
+                "It's a low roll, but you can make the best of it.",
+                "The start is rough, but things can turn around.",
+                "Not the best roll, but it's only the beginning."
             ],
             [
-                "You rolled a 3. Today will be ordinary, nothing special.",
-                "You rolled a 3. Expect a routine day with no major surprises.",
-                "You rolled a 3. It's a standard day, nothing to get excited about.",
-                "You rolled a 3. Don't expect much excitement today.",
-                "You rolled a 3. It's a day with a predictable routine."
+                "Today will be ordinary, nothing special.",
+                "Expect a routine day with no major surprises.",
+                "It's a standard day, nothing to get excited about.",
+                "Don't expect much excitement today.",
+                "It's a day with a predictable routine."
             ],
             [
-                "You rolled a 4. It's a mediocre day, but you can find moments of joy.",
-                "You rolled a 4. Expect an average day with some ups and downs.",
-                "You rolled a 4. It's a day with no extremes, just the usual routine.",
-                "You rolled a 4. The day is plain, but it's what you make of it that counts.",
-                "You rolled a 4. A standard day awaits, not too exciting, not too dull."
+                "It's a mediocre day, but you can find moments of joy.",
+                "Expect an average day with some ups and downs.",
+                "It's a day with no extremes, just the usual routine.",
+                "The day is plain, but it's what you make of it that counts.",
+                "A standard day awaits, not too exciting, not too dull."
             ],
             [
-                "You rolled a 5. Things might not go your way, but you'll make the best of it.",
-                "You rolled a 5. A bit of bad luck, but you can turn it around.",
-                "You rolled a 5. It's a challenging day, but you're up for the task.",
-                "You rolled a 5. A bumpy start, but you can smooth out the journey.",
-                "You rolled a 5. Adversity today, but you'll rise above it."
+                "Things might not go your way, but you'll make the best of it.",
+                "A bit of bad luck, but you can turn it around.",
+                "It's a challenging day, but you're up for the task.",
+                "A bumpy start, but you can smooth out the journey.",
+                "Adversity today, but you'll rise above it."
             ],
             [
-                "You rolled a 6. The day holds promise, but it's up to you to seize it.",
-                "You rolled a 6. Opportunity knocks; answer the door with enthusiasm.",
-                "You rolled a 6. It's a day filled with potential; make it count.",
-                "You rolled a 6. The start of a great day; just keep the momentum going.",
-                "You rolled a 6. A favorable roll! Today is yours to shape."
+                "The day holds promise, but it's up to you to seize it.",
+                "Opportunity knocks; answer the door with enthusiasm.",
+                "It's a day filled with potential; make it count.",
+                "The start of a great day; just keep the momentum going.",
+                "A favorable roll! Today is yours to shape."
             ],
             [
-                "You rolled a 7. A decent day is ahead; don't let it go to waste.",
-                "You rolled a 7. It's an okay day, but it can be better with effort.",
-                "You rolled a 7. Nothing exceptional, but it's a canvas for your actions.",
-                "You rolled a 7. The day is what you make of it; aim high.",
-                "You rolled a 7. A good roll! Embrace the possibilities."
+                "A decent day is ahead; don't let it go to waste.",
+                "It's an okay day, but it can be better with effort.",
+                "Nothing exceptional, but it's a canvas for your actions.",
+                "The day is what you make of it; aim high.",
+                "A good roll! Embrace the possibilities."
             ],
             [
                 "You rolled an 8. Luck is on your side, enjoy your day.",
