--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         // Responses based on the dice roll
         const responses = [
             [
-                "Your day might be challenging, but you'll learn from it.",
-                "Don't worry, it's just a little setback.",
-                "Keep your spirits high; better days are coming.",
-                "The morning might be tough, but the day can improve.",
-                "Challenges lie ahead, but you're up for it."
+                "A critical failure. Your day might be challenging, but you'll learn from it.",
+                "A critical failure. Don't worry, it's just a little setback.",
+                "A critical failure. Keep your spirits high; better days are coming.",
+                "A critical failure. The morning might be tough, but the day can improve.",
+                "A critical failure. Challenges lie ahead, but you're up for it."
             ],
             [
                 "The day ahead doesn't look great, but it's not the worst.",
@@ -80,95 +80,95 @@
                 "A good roll! Embrace the possibilities."
             ],
             [
-                "You rolled an 8. Luck is on your side, enjoy your day.",
-                "You rolled an 8. A fortunate day awaits; savor every moment.",
-                "You rolled an 8. Expect some good fortune; make the most of it.",
-                "You rolled an 8. Luck smiles upon you; ride the wave of positivity.",
-                "You rolled an 8. A day of favorable outcomes. Bask in the good vibes."
+                "Luck is on your side, enjoy your day.",
+                "A fortunate day awaits; savor every moment.",
+                "Expect some good fortune; make the most of it.",
+                "Luck smiles upon you; ride the wave of positivity.",
+                "A day of favorable outcomes. Bask in the good vibes."
             ],
             [
-                "You rolled a 9. Today will be better than expected.",
-                "You rolled a 9. A pleasant surprise is in store for your day.",
-                "You rolled a 9. It's a day full of hidden treasures; uncover them.",
-                "You rolled a 9. Anticipate a better day than you first thought.",
-                "You rolled a 9. A day with unexpected delights. Enjoy the journey."
+                "Today will be better than expected.",
+                "A pleasant surprise is in store for your day.",
+                "It's a day full of hidden treasures; uncover them.",
+                "Anticipate a better day than you first thought.",
+                "A day with unexpected delights. Enjoy the journey."
             ],
             [
-                "You rolled a 10. It's a good day to be you!",
-                "You rolled a 10. The universe smiles on you; relish the moment.",
-                "You rolled a 10. An exceptional day for you to shine.",
-                "You rolled a 10. A remarkable day to celebrate who you are.",
-                "You rolled a 10. The best possible roll! Your day is destined for greatness."
+                "It's a good day to be you!",
+                "The universe smiles on you; relish the moment.",
+                "An exceptional day for you to shine.",
+                "A remarkable day to celebrate who you are.",
+                "The best possible roll! Your day is destined for greatness."
             ],
             [
-                "You rolled an 11. Things are looking up!",
-                "You rolled an 11. An upward trend in your day's fortune awaits.",
-                "You rolled an 11. It's a day of rising optimism; seize the opportunities.",
-                "You rolled an 11. The day is on an upward trajectory; stay positive.",
-                "You rolled an 11. An auspicious roll! Your day is taking a turn for the better."
+                "Things are looking up!",
+                "An upward trend in your day's fortune awaits.",
+                "It's a day of rising optimism; seize the opportunities.",
+                "The day is on an upward trajectory; stay positive.",
+                "An auspicious roll! Your day is taking a turn for the better."
             ],
             [
-                "You rolled a 12. Luck favors you today.",
-                "You rolled a 12. Fortunes are in your favor; embrace the blessings.",
-                "You rolled a 12. Luck is your ally; use it wisely.",
-                "You rolled a 12. The day is sprinkled with good luck; make the most of it.",
-                "You rolled a 12. A day where luck is on your side. Savor the serendipity."
+                "Luck favors you today.",
+                "Fortunes are in your favor; embrace the blessings.",
+                "Luck is your ally; use it wisely.",
+                "The day is sprinkled with good luck; make the most of it.",
+                "A day where luck is on your side. Savor the serendipity."
             ],
             [
-                "You rolled a 13. It's a day filled with opportunities.",
-                "You rolled a 13. The day is brimming with chances; seize them all.",
-                "You rolled a 13. An opportunity-rich day. Don't let them slip away.",
-                "You rolled a 13. The universe offers you an abundance of opportunities.",
-                "You rolled a 13. A day where opportunities are endless. Grab them all!"
+                "It's a day filled with opportunities.",
+                "The day is brimming with chances; seize them all.",
+                "An opportunity-rich day. Don't let them slip away.",
+                "The universe offers you an abundance of opportunities.",
+                "A day where opportunities are endless. Grab them all!"
             ],
             [
-                "You rolled a 14. Today is yours for the taking.",
-                "You rolled a 14. The day is your playground; make the most of it.",
-                "You rolled a 14. It's your day to conquer and enjoy the rewards.",
-                "You rolled a 14. The world is at your feet; take bold steps.",
-                "You rolled a 14. A day to seize and make your own. You're in control."
+                "Today is yours for the taking.",
+                "The day is your playground; make the most of it.",
+                "It's your day to conquer and enjoy the rewards.",
+                "The world is at your feet; take bold steps.",
+                "A day to seize and make your own. You're in control."
             ],
             [
-                "You rolled a 15. Expect a fantastic day!",
-                "You rolled a 15. Anticipate a day filled with wonder and amazement.",
-                "You rolled a 15. A day of magic and marvels; enjoy the spectacle.",
-                "You rolled a 15. The day is brimming with fantastic possibilities.",
-                "You rolled a 15. A day of pure enchantment. Let the adventure begin!"
+                "Expect a fantastic day!",
+                "Anticipate a day filled with wonder and amazement.",
+                "A day of magic and marvels; enjoy the spectacle.",
+                "The day is brimming with fantastic possibilities.",
+                "A day of pure enchantment. Let the adventure begin!"
             ],
             [
-                "You rolled a 16. The day is yours to conquer.",
-                "You rolled a 16. You're the master of your destiny today; forge ahead.",
-                "You rolled a 16. A day for bold actions; take the lead.",
-                "You rolled a 16. The world is your oyster; savor the taste of success.",
-                "You rolled a 16. A day of victory and triumph. Embrace it."
+                "The day is yours to conquer.",
+                "You're the master of your destiny today; forge ahead.",
+                "A day for bold actions; take the lead.",
+                "The world is your oyster; savor the taste of success.",
+                "A day of victory and triumph. Embrace it."
             ],
             [
-                "You rolled a 17. Victory is in your favor today.",
-                "You rolled a 17. The taste of victory is sweet; savor it.",
-                "You rolled a 17. Success is on the horizon; reach out and claim it.",
-                "You rolled a 17. A day for champions; wear your victory proudly.",
-                "You rolled a 17. A victorious day. Revel in your achievements."
+                "Victory is in your favor today.",
+                "The taste of victory is sweet; savor it.",
+                "Success is on the horizon; reach out and claim it.",
+                "A day for champions; wear your victory proudly.",
+                "A victorious day. Revel in your achievements."
             ],
             [
-                "You rolled an 18. Your day will be legendary!",
-                "You rolled an 18. A day filled with legendary feats and tales.",
-                "You rolled an 18. The stuff of legends unfolds today; be epic.",
-                "You rolled an 18. A legendary day; write your story in the annals of time.",
-                "You rolled an 18. A day to become a legend. Make history!"
+                "Your day will be legendary!",
+                "A day filled with legendary feats and tales.",
+                "The stuff of legends unfolds today; be epic.",
+                "A legendary day; write your story in the annals of time.",
+                "A day to become a legend. Make history!"
             ],
             [
-                "You rolled a 19. Fate smiles upon you; it's an incredible day.",
-                "You rolled a 19. Fate's favor is upon you; embrace the extraordinary.",
-                "You rolled a 19. It's a day beyond imagination. Savor the incredible.",
-                "You rolled a 19. A day of astonishing fortune; revel in the amazement.",
-                "You rolled a 19. An incredible roll! Your day is filled with awe."
+                "Fate smiles upon you; it's an incredible day.",
+                "Fate's favor is upon you; embrace the extraordinary.",
+                "It's a day beyond imagination. Savor the incredible.",
+                "A day of astonishing fortune; revel in the amazement.",
+                "An incredible roll! Your day is filled with awe."
             ],
             [
-                "You rolled a 20. Your enemies cower at your might. Today will be a good day, even if you have to make it one yourself.",
-                "You rolled a 20. The universe bows to your greatness. A day of unparalleled triumph awaits.",
-                "You rolled a 20. You are unstoppable. Today is a day for the history books.",
-                "You rolled a 20. A day of absolute dominance. Make it legendary.",
-                "You rolled a 20. A roll of destiny! You are the hero of this epic day."
+                "A critical success! Your enemies cower at your might. Today will be a good day, even if you have to make it one yourself.",
+                "A critical success! The universe bows to your greatness. A day of unparalleled triumph awaits.",
+                "A critical success! You are unstoppable. Today is a day for the history books.",
+                "A critical success! A day of absolute dominance. Make it legendary.",
+                "A critical success! A roll of destiny! You are the hero of this epic day."
             ]
 
         ];
